force-app/main/default/objects/Meeting_Member__c/Meeting_Member__c.object-meta.xml
<CustomObject>
    <label>Meeting Member</label>
    <nameField>
        <displayFormat>MM-{00000}</displayFormat>
        <label>Meeting Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>