force-app/main/default/objects/Meeting_Member__c/fields/Colleague__c.field-meta.xml
<CustomField>
    <fullName>Colleague__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colleague</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Meeting Memberships</relationshipLabel>
    <relationshipName>Meeting_Colleague_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>