force-app/main/default/objects/Meeting_Member__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meeting Memberships</relationshipLabel>
    <relationshipName>Meeting_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>