force-app/main/default/objects/Meeting_Member__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker</label>
    <referenceTo>Speaker__c</referenceTo>
    <relationshipLabel>Meeting Memberships</relationshipLabel>
    <relationshipName>Meeting_Speaker_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>