force-app/main/default/objects/Meeting_Member__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approver</fullName>
            </value>
            <value>
                <fullName>Second Approver</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Organizer</fullName>
            </value>
            <value>
                <fullName>CoOrganizer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>