force-app/main/default/objects/Meeting_Member__c/fields/Write_In_Name__c.field-meta.xml
<CustomField>
    <fullName>Write_In_Name__c</fullName>
    <label>Write-In Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>