force-app/main/default/objects/Meeting_Member__c/recordTypes/Colleague.recordType-meta.xml
<RecordType>
    <fullName>Colleague</fullName>
    <active>true</active>
    <label>Colleague</label>
</RecordType>