force-app/main/default/objects/Meeting_Member__c/recordTypes/Non_Profiled_Attendee.recordType-meta.xml
<RecordType>
    <fullName>Non_Profiled_Attendee</fullName>
    <active>true</active>
    <label>Non-Profiled Attendee</label>
</RecordType>