force-app/main/default/objects/Meeting_Member__c/recordTypes/Write_In.recordType-meta.xml
<RecordType>
    <fullName>Write_In</fullName>
    <active>true</active>
    <label>Write-In</label>
</RecordType>